[project]
name = "rhweb2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic==0.9.9",
    "bcrypt==3.1.4",
    "beautifulsoup4==4.6.0",
    "bs4==0.0.1",
    "certifi==2018.1.18",
    "cffi>=1.11.5",
    "chardet==3.0.4",
    "click==6.7",
    "dokuwiki==1.1.0",
    "flask==0.12.2",
    "idna==2.6",
    "itsdangerous==0.24",
    "jinja2==2.10",
    "libsass>=0.23.0",
    "lxml[html-clean]>=6.0.4",
    "mako==1.0.7",
    "markupsafe==1.1",
    "psycopg2-binary>=2.8.4",
    "pycparser==2.18",
    "python-dateutil==2.7.2",
    "python-editor==1.0.3",
    "rcssmin>=1.2.2",
    "requests>=2.18.4",
    "six==1.12.0",
    "sqlalchemy==1.2.6",
    "unidecode==1.0.22",
    "urllib3==1.24.2",
    "werkzeug==0.14.1",
    "wtforms==2.1",
]
