[project]
name = "rhweb2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "dokuwiki>=1.3.3",
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "lxml[html-clean]>=6.0.4",
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.1",
    "sqlalchemy<2.0.0",
    "unidecode>=1.4.0",
    "wtforms>=3.2.1",
]
